<resources>
    <string name="app_name">FindingTrashPanda</string>
    <string name="title_activity_maps">Map</string>
    <string name="found">You found </string>
    <string name="exclamation_point">!</string>
    <string name="found_panda">I found you!</string>
    <string name="found_steve">You found Steve!</string>
    <string name="hidden_life_info">Short bio:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing
        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat.</string>
    <string name="found_panda_title">Found a trash panda?</string>
    <string name="hide_panda_title">Ready to hide %1$s?</string>
    <string name="hide_insert_name">hide %1$s</string>
    <string name="found_panda_instructions">Your trash panda will be validated and its
        identity will be revealed using NFC. To conduct scanning, place your phone on
        the back of the raccoon.</string>
    <string name="hide_panda_instructions">In order to record the location of
        hiding, please click the button below once you have found a hiding spot. Once
        you click below, do not move the panda. Sit back and wait for others to
        discover it!</string>
    <string name="hide_panda_ready">Okay, I found a spot!</string>
    <string name="hide_panda_not_ready">Need more time? When you are ready to hide, simply
        press the trash panda icon on the home screen.</string>
    <string name="hide_later">Hide Later</string>
    <string name="verify">Verify!</string>
    <string name="username">Username</string>
    <string name="points">Points:</string>
    <string name="amt_finds">Amount of finds:</string>
    <string name="most_found_panda">Most found panda:</string>
    <string name="stats">Stats:</string>
    <string name="steve">Steve</string>
    <string name="panda_hiding">Hiding...</string>
    <string name="sign_out">Sign Out</string>
    <string name="hide_now">Hide now!</string>
    <string name="go_back">Go back</string>
    <string name="go_home">Go home</string>
    <string name="time_hiding">Time hiding:</string>
</resources>
