<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/panda_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:gravity="center"
        android:text="@string/found_steve"/>

    <ImageView
        android:id="@+id/panda_picture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/imageview_border"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:text="@string/hidden_life_info"/>

    <TextView
        android:id="@+id/hidden_life"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="@string/lorem_ipsum"/>

</LinearLayout>